# rust_demo

./: Cargo.toml  api.md  my_database.db  posts.db  spec.md  users_sample.json
src/: entity.rs
